# Multi-Source-Candidate-Data-Transformer

./: README.md  profile_custom_example.json  profile_default.json
candidate_transformer/: .gitignore  pyproject.toml  requirements.txt
candidate_transformer/cdt/: __init__.py  __main__.py  calibrate.py  cli.py  config.py  content_address.py  ledger.py  model.py  pipeline.py  project.py  reconcile.py  resolve.py  validate.py  vocab.py
candidate_transformer/cdt/adapters/: __init__.py  ats_json.py  base.py  github_api.py  recruiter_csv.py  recruiter_notes.py  resume_file.py
candidate_transformer/cdt/normalize/: __init__.py  country.py  dates.py  emails.py  links.py  names.py  phones.py  skills.py  text.py
candidate_transformer/cdt/vocab/: country_alias.json  reliability_matrix.json  skills_vocab.json
candidate_transformer/configs/: bad_config.json  custom_contacts.json  custom_example.json  default.json
candidate_transformer/output/: profile_custom_example.json
candidate_transformer/samples/: ats.json  broken.json  edge_two_people.csv  github_janedoe.json  jane_doe_resume.txt  notes.txt  recruiter.csv
candidate_transformer/tests/: conftest.py  test_end_to_end.py  test_identity_and_gate.py  test_normalizers.py  test_projection_and_validation.py
