[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-data-transformer"
version = "1.0.0"
description = "Multi-Source Candidate Data Transformer: deterministic, explainable, prefer-empty-over-wrong."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Divyam Sareen" }]
dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "chardet>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "reportlab>=4.0"]

[project.scripts]
cdt = "cdt.cli:main"

[tool.setuptools]
packages = ["cdt", "cdt.adapters", "cdt.normalize"]

[tool.setuptools.package-data]
cdt = ["vocab/*.json"]
